chore: stop using java 21 preview features